--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -988,6 +988,43 @@ background: linear-gradient(153deg, rgba(0,184,140,1) 0%, rgba(19,55,50,1) 100%)
             font-size: 35px;
             color:#B7D14E;
         }
+        h4 {
+            text-align: center;
+            padding-top: 25px;
+            font-size: 22px;
+            color:#B7D14E;
+            padding-bottom: 2px;
+            text-decoration: underline;
+            padding-bottom: 10px;
+        }
+        .form-groupe{
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+            text-align: center;
+            margin-left: 25%;
+            label{
+                text-align: center;
+                padding-top: 15px;
+                padding-bottom: 10px;
+                font-size: 25px;
+                color: #B7D14E;
+            }
+            input{
+                font-size: 30px;
+                text-align: center;
+                border: none;
+                background-color: #1E6243;
+                height: 50px;
+                border-radius: 15px;
+               
+            }
+           
+
+        }
+        .abo{
+            label {width: 100%;}
+        }
         .formulaire
         {
             margin-top: 30px;
@@ -995,6 +1032,123 @@ background: linear-gradient(153deg, rgba(0,184,140,1) 0%, rgba(19,55,50,1) 100%)
             height: 750px;
             border-radius: 25px;
             position: relative;
+            .button{
+                width: 250px;
+                height: 50px;
+                margin: auto;
+                margin-top: 15px;
+                button{
+                    font-size: 30px;
+                    border: none;
+                    width: 100%;
+                    height: 100%;
+                    background-color:#ffdc06;
+                    color:#562B1A;
+                    opacity: 0.5;
+                    border-radius: 15px;
+                    &:hover{
+                        opacity: 1;
+                    }
+                }
+            }
+            .affiPagination
+            {
+                width: 50%;
+                margin: auto;
+                text-align: center;
+                li {
+                    color: #e6f1b7;
+                    font-size: 22px;
+                    a{
+                        text-decoration: none;
+                        color: white;
+                       display: block;
+                      
+                       height: 45px;
+                       line-height: 40px;
+                       margin-top: 10px;
+                       margin-bottom: 10px;
+                       
+                     
+                       &:hover{
+                        color: #B7D14E;
+                        background-color: rgba(0, 0, 0, 0.2);
+                       }
+                    }
+                }
+               
+            } 
+            .pagination{
+                    width: 200px;
+                    
+                    
+                    margin: auto;
+                    text-align: center;
+                    display: flex;
+                    font-size: 30px;
+                    justify-content: center;
+                    gap:10px;
+                    margin-bottom: 25px;
+                    a{ color: #ffdc06;
+                       
+                    }
+                }
+            .retour{
+                width: 250px;
+                height: 50px;
+                margin: auto;
+                margin-top: 35px;
+                
+                text-align: center;
+                a{
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(0, 0, 0, 0.1);
+                    color: white;
+                    text-decoration: none;
+                    font-size: 33px;
+                    border-radius: 15px;
+                    line-height: 45px;
+                    opacity: 0.5;
+                     &:hover{
+                    opacity: 1;
+                }
+                }
+               
+            }
+            .error{
+                padding-top: 15px;
+                text-align: center;
+                p{
+                    font-size: 35px;
+                    color: red;
+                }
+            }
+            .delete{
+               
+                width: 250px;
+                margin:auto;
+                margin-top: 15px;
+                margin-right: 50px;
+                a{
+                    height: 50px;
+                    display: block;
+                    background-color: red;
+                    color: white;
+                    text-decoration: none;
+                    font-size: 25px;
+                    border-radius: 15px;
+                    text-align: center;
+                    line-height: 45px;
+                    opacity: 0.5;
+                    &:hover{
+                        opacity: 1;
+                    }
+
+
+                }
+            }
             .copie{
                 width: 270px;
                 
