--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1029,9 +1029,150 @@ background: linear-gradient(153deg, rgba(0,184,140,1) 0%, rgba(19,55,50,1) 100%)
         {
             margin-top: 30px;
             background-color: rgba(0, 0, 0, 0.1);
-            height: 750px;
+            min-height: 750px;
             border-radius: 25px;
             position: relative;
+            .abonne{
+                width: 450px;
+                height: 76px;
+                position: absolute;
+                top:0px;
+                right: 0px;
+                text-align: center;
+                
+                h3{
+                    color: #B7D14E;
+                    font-size: 22px;
+                    
+                    margin-top: 10px;
+                    margin-bottom: 5px;
+                }
+                p{
+                    color: white;
+                    margin-top: 3px;
+                    span{
+                        color: #B7D14E;
+                        font-size: 18px;
+                    }
+                }
+            }
+
+            .linkPrint{
+                display: flex;
+                justify-content: space-around;
+                margin-top: 35px;
+                a{
+
+                    text-decoration: none;
+                    font-size: 25px;
+                    color: white;
+                    display: block;
+                    text-align: center;
+                    height: 55px;
+                    line-height: 50px;
+                   
+                }
+                .linkValide{
+                    background-color:#B7D14E;
+                    width: 225px; 
+                    border-radius: 15px;
+                    opacity: 0.5;
+                    &:hover{
+                        opacity: 1;
+                    }
+                }
+                .linkRefresh{
+                    background-color:#1E6243;
+                    width: 225px; 
+                    border-radius: 15px;
+                    opacity: 0.5;
+                    &:hover{
+                        opacity: 1;
+                    }
+                }
+                .linkReturn{
+                    background-color: rgba(0, 0, 0, 0.1);
+                    width: 225px; 
+                    border-radius: 15px;
+                    opacity: 0.5;
+                    &:hover{
+                        opacity: 1;
+                    }
+                }
+            }
+    
+
+            .allPrint{
+                display: flex;
+                flex-wrap: wrap;
+                width: 98%;
+                margin: auto;
+                gap:5px;
+                margin-top: 35px;
+                justify-content:space-around;
+            
+                .printSelect{
+                    background-color: rgba(0, 0, 0, 0.1);
+                width: 300px;
+                margin-bottom: 10px;
+                border-radius: 15px;
+                .nbrPrint{
+                    font-size: 17px;
+                    padding-top: 10px;
+                    padding-bottom: 5px;
+                    color: #B7D14E;
+                    text-align: center;
+                }
+                .resultat{
+                    width: 50%;
+                    float: left;
+                    color: white;
+                    text-align: center;
+                    font-size: 15px;
+                    padding-top: 15px;
+                    padding-bottom: 15px;
+                    span{
+                        color: #B7D14E;
+                    }
+                }
+                .choix{
+                   text-align: center;
+                    margin-top: 15px;
+                    label{
+                        font-size: 25px;
+                        margin-left: 25px;
+                    }
+                    input{
+                        background-color: #627281;
+                        width: 20px;
+                        height: 20px;
+                    }
+                }
+                .deletePrint{
+                    width: 100px;
+                    background-color: red;
+                    height: 40px;
+                    text-align: center;
+                    line-height: 38px;
+                    margin-left: 190px;
+                    margin-bottom: 5px;
+                    border-radius: 15px;
+                    margin-top: 10px;
+                    opacity: 0.5;
+                    &:hover{
+                        opacity: 1;
+                    }
+                    a{
+                        
+                        text-decoration: none;
+                        color: white;
+
+                    }
+                }
+                
+            }
+            }
+            
             .button{
                 width: 250px;
                 height: 50px;
